--- a/icon.html
+++ b/icon.html
@@ -3,7 +3,7 @@
 <head>    
      <meta charset="UTF-8">
      <title>icone avec lien</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="icon.css">
      <!--lien vers une bibliotheque d'icone-->
      <link rel="stylesheet" href="https//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
