--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>MON portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="portfolio.css">
     </head>
     <body>
         <header>
