Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <header>
+            <nav>
+                <a href="form.html">Formulaire</a>
+                <a href="icon.html">Icon</a>
+                <a href="cv.html">cv</a>
+            
+            </nav>
             <img src="photo.jpg" alt="photo de Maurice"> class="photo de profil">
             <h1> Maurice Donald Ngah II</h1>
             <p>Etudiant en informatique - passionné par l'IA</p>
