--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="cv.html">cv</a>
             
             </nav>
-            <img src="photo.jpg" alt="photo de Maurice"> class="photo de profil">
+            <img src="photo.jpg" alt="photo de Maurice"> 
             <h1> Maurice Donald Ngah II</h1>
             <p>Etudiant en informatique - passionné par l'IA</p>
         </header>
