--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="form.html">Formulaire</a>
+                <a href="formulaire.html">Formulaire</a>
                 <a href="icon.html">Icon</a>
                 <a href="cv.html">cv</a>
             
